--- a/DOAN/Views/Product/Recomment.cshtml
+++ b/DOAN/Views/Product/Recomment.cshtml
@@ -8,7 +8,7 @@
                 <a href="/Product/Details/@pro.MASP">
                     <img class="anh-sp" src="@Url.Content(pro.HINHSP)" height="200" width="275" />
                     <h6>@Html.DisplayFor(model => pro.TENSP)</h6>
-                    <p class="price">@Html.DisplayFor(model => pro.GIA)</p>
+                    <p class="price">@Html.DisplayFor(model => pro.GIa)</p>
                 </a>
             </td>
         }
